// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render a primary lg button render primary button comp large size 1`] = `
<button
  className=" primary bg-primary text-white border-2 border-primary px-xl py-3.5 text-md font-bold    rounded-full hover-state focus:outline-none focus-state flex items-center justify-center content-center undefined"
>
  <span
    className="inline-block font-medium	"
  >
    Button
  </span>
</button>
`;

exports[`render a primary lg button render primary small button comp when no props are passed 1`] = `
<button
  className=" primary bg-primary text-white border-2 border-primary px-m py-1.5 font-medium text-sm   rounded-full hover-state focus:outline-none focus-state flex items-center justify-center content-center undefined"
>
  <span
    className="inline-block font-medium	"
  >
    Button
  </span>
</button>
`;

exports[`render a primary lg button render secondary button comp md size 1`] = `
<button
  className=" secondary bg-white text-primary border border-primary px-l py-xs text-base font-medium   rounded-full hover-state focus:outline-none focus-state flex items-center justify-center content-center undefined"
>
  <span
    className="inline-block font-medium	"
  >
    Button
  </span>
</button>
`;

exports[`render a primary lg button render text button comp sm size 1`] = `
<button
  className=" text text-accent focus-within px-m py-1.5 font-medium text-sm   rounded-full hover-state focus:outline-none focus-state flex items-center justify-center content-center undefined"
>
  <span
    className="inline-block font-medium	"
  >
    Button
  </span>
</button>
`;
